objects/GenAIGatewayRequestTag__dlm.object
<CustomObject>
    <fields>
        <fullName>KQ_id__c</fullName>
        <label>Key Qualifier Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_parent__c</fullName>
        <label>Key Qualifier Parent</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloud__c</fullName>
        <label>Cloud</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <label>Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>orgId__c</fullName>
        <label>Org Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parent__c</fullName>
        <label>Parent</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rel_1753303655230_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GenAIGatewayRequestTag_parent_map_Ge_rel</label>
        <referenceTo>GenAIGatewayRequest__dlm</referenceTo>
        <relationshipLabel>GenAIGatewayRequestTag_parent_map_Ge_rel</relationshipLabel>
        <relationshipName>rel_1753303655230_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tagValue__c</fullName>
        <label>Tag Value</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tag__c</fullName>
        <label>Tag</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
</CustomObject>